--- a/web_backend/src/web_backend.Blazor.Client/Pages/Gaming.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Gaming.razor
@@ -1,7 +1,7 @@
 @page "/gaming"
 @using System.Net.Http.Json
 @using web_backend.Games
-@using web_backend.Blazor.Client.Services
+@using web_backend.Enums
 @using Microsoft.AspNetCore.Components.Forms
 @using System.IO
 @inject HttpClient Http
@@ -62,10 +62,11 @@
 
                     <div class="form-group">
                         <label for="eventType">Event Type:</label>
-                        <InputSelect id="eventType" @bind-value="gameUploadDto.EventType" class="form-control" TValue="GameEventType">
-                            <option value="0">Game</option>
-                            <option value="1">Practice</option>
-                            <option value="2">Shootaround</option>
+                        <InputSelect id="eventType" @bind-value="gameUploadDto.EventType" class="form-control" TValue="EventType">
+                            @foreach (EventType type in Enum.GetValues(typeof(EventType)))
+                            {
+                                <option value="@type">@type</option>
+                            }
                         </InputSelect>
                     </div>
 
@@ -106,7 +107,7 @@
                             {
                                 <tr>
                                     <td>@game.HomeTeam vs @game.AwayTeam</td>
-                                    <td>@(game.HomeScore ?? 0) - @(game.AwayScore ?? 0)</td>
+                                    <td>@game.HomeScore - @game.AwayScore</td>
                                     <td>@game.EventDate.ToShortDateString()</td>
                                     <td>
                                         <button class="btn btn-primary" @onclick="() => ViewGame(game.Id)">View</button>
@@ -161,35 +162,35 @@
 
             // Create a MultipartFormDataContent to send the form data
             using var content = new MultipartFormDataContent();
-            
+
             // Add all text fields
             content.Add(new StringContent(gameUploadDto.GameUrl ?? ""), "GameUrl");
-            content.Add(new StringContent(gameUploadDto.HomeTeam ?? ""), "HomeTeam");
-            content.Add(new StringContent(gameUploadDto.AwayTeam ?? ""), "AwayTeam");
+            content.Add(new StringContent(gameUploadDto.HomeTeam), "HomeTeam");
+            content.Add(new StringContent(gameUploadDto.AwayTeam), "AwayTeam");
             content.Add(new StringContent(gameUploadDto.HomeScore.ToString()), "HomeScore");
             content.Add(new StringContent(gameUploadDto.AwayScore.ToString()), "AwayScore");
             content.Add(new StringContent(gameUploadDto.Broadcasters ?? ""), "Broadcasters");
-            content.Add(new StringContent(gameUploadDto.Description ?? ""), "Description");
+            content.Add(new StringContent(gameUploadDto.Description), "Description");
             content.Add(new StringContent(gameUploadDto.EventDate.ToString("o")), "EventDate");
-            content.Add(new StringContent(((int)gameUploadDto.EventType).ToString()), "EventType");
+            content.Add(new StringContent(gameUploadDto.EventType.ToString()), "EventType");
 
             // Add the file
             var fileContent = new StreamContent(selectedFile.OpenReadStream(maxAllowedSize: 100_000_000));
             content.Add(
-                content: fileContent, 
-                name: "VideoFile", 
+                content: fileContent,
+                name: "VideoFile",
                 fileName: selectedFile.Name);
 
             // Send the request
             var response = await Http.PostAsync("api/app/game", content);
-            
+
             if (response.IsSuccessStatusCode)
             {
                 // Reset the form
                 gameUploadDto = new GameUploadDto();
                 gameUploadDto.EventDate = DateTime.Now;
                 selectedFile = null;
-                
+
                 // Reload games list
                 await LoadGames();
             }
@@ -221,13 +222,6 @@
         public string? Broadcasters { get; set; } = string.Empty;
         public string Description { get; set; } = string.Empty;
         public DateTime EventDate { get; set; } = DateTime.Now;
-        public GameEventType EventType { get; set; } = GameEventType.Game;
-    }
-
-    private enum GameEventType
-    {
-        Game = 0,
-        Practice = 1,
-        Shootaround = 2
+        public EventType EventType { get; set; } = EventType.Football;
     }
 }
