--- a/web_backend/src/web_backend.Blazor.Client/_Imports.razor
+++ b/web_backend/src/web_backend.Blazor.Client/_Imports.razor
@@ -8,8 +8,11 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.JSInterop
 @using Volo.Abp.AspNetCore.Components.Web
+@using web_backend.Blazor.Client
 @using web_backend.Blazor
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
+@using web_backend.Games
+@using web_backend.Enums
