--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -43,36 +43,47 @@
                 </li>
 
                 <li class="vss-nav__item nav-item">
-                    @if (activeLivestreams != null && activeLivestreams.Any())
+                    @if (authState != null && authState.User.Identity?.IsAuthenticated == true)
                     {
-                        <div class="dropdown">
-                            <a class="vss-nav__link nav-link dropdown-toggle" href="#" id="livestreamDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Livestreams (@activeLivestreams.Count)
+                        @if (activeLivestreams != null && activeLivestreams.Any())
+                        {
+                            <div class="dropdown">
+                                <a class="vss-nav__link nav-link dropdown-toggle" href="#" id="livestreamDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Livestreams (@activeLivestreams.Count)
+                                    <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
+                                </a>
+                                <ul class="vss-dropdown dropdown-menu" aria-labelledby="livestreamDropdown">
+                                    @foreach (var stream in activeLivestreams)
+                                    {
+                                        <li class="vss-dropdown__item">
+                                            <a class="vss-dropdown__link dropdown-item" href="/livestream/@stream.Id" @onclick="@(() => NavigateToLivestream(stream.Id.ToString()))" @onclick:preventDefault>
+                                                @(!string.IsNullOrEmpty(stream.HomeTeam) && !string.IsNullOrEmpty(stream.AwayTeam)
+                                                    ? $"{stream.HomeTeam} vs {stream.AwayTeam}"
+                                                    : $"Livestream {stream.Id.ToString().Substring(0, 8)}")
+                                                <span class="badge bg-danger">LIVE</span>
+                                            </a>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                        }
+                        else
+                        {
+                            <a class="vss-nav__link nav-link" href="#" @onclick="ShowNoLivestreamsNotification" @onclick:preventDefault>
+                                Livestreams
                                 <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                             </a>
-                            <ul class="vss-dropdown dropdown-menu" aria-labelledby="livestreamDropdown">
-                                @foreach (var stream in activeLivestreams)
-                                {
-                                    <li class="vss-dropdown__item">
-                                        <a class="vss-dropdown__link dropdown-item" href="/livestream/@stream.Id" @onclick="@(() => NavigateToLivestream(stream.Id.ToString()))" @onclick:preventDefault>
-                                            @(!string.IsNullOrEmpty(stream.HomeTeam) && !string.IsNullOrEmpty(stream.AwayTeam)
-                                                ? $"{stream.HomeTeam} vs {stream.AwayTeam}"
-                                                : $"Livestream {stream.Id.ToString().Substring(0, 8)}")
-                                            <span class="badge bg-danger">LIVE</span>
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
-                        </div>
+                        }
                     }
                     else
                     {
-                        <a class="vss-nav__link nav-link" href="#" @onclick="ShowNoLivestreamsNotification" @onclick:preventDefault>
+                        <a class="vss-nav__link nav-link" href="#" @onclick="RedirectToLogin" @onclick:preventDefault>
                             Livestreams
                             <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                         </a>
                     }
                 </li>
+
 
                 <li class="vss-nav__item nav-item">
                     <a class="vss-nav__link nav-link" href="/schedule">
@@ -262,6 +273,12 @@
     {
         await JS.InvokeVoidAsync("authHelpers.clearAuthTokens");
         NavigationManager.NavigateTo("/authentication/logout", true);
+    }
+
+    private void RedirectToLogin()
+    {
+        var returnUrl = Uri.EscapeDataString(NavigationManager.Uri);
+        NavigationManager.NavigateTo($"{ApiBaseUrl}/Account/Login?returnUrl={returnUrl}", true);
     }
 
 
