--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -22,17 +22,18 @@
 
 <div class="vss-page">
     <header class="vss-header navbar navbar-expand-lg">
-        <!-- Logo -->
         <a class="vss-header__logo navbar-brand" href="/landing">
             <img src="/images/varsitylogoempty.jpg" alt="VSS Company Header Logo" width="120" />
         </a>
 
-        <!-- Navbar Toggler for Mobile View -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#vssNavbar" aria-controls="vssNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Mobile-optimized navbar toggler -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#vssNavbar" aria-controls="vssNavbar"
+                aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Navigation Bar with Links and Dropdowns -->
+        <!-- Navigation Bar with improved mobile collapse -->
         <nav class="collapse navbar-collapse vss-header" id="vssNavbar">
             <ul class="vss-nav navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="vss-nav__item nav-item">
